# receiver/app.py
@@ -120,6 +120,9 @@ def complete(body):
     """Handle the 'complete' event."""
     return produce_event('complete', body)
 
+def get_check():
+    return NoContent, 200
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 #app.add_api("openapi.yaml", strict_validation=True, validate_responses=True)
 app.add_api("openapi.yaml", base_path="/receiver", strict_validation=True, validate_responses=True)
